# headtracker

./: .gitignore  CMakeLists.txt  LICENSE.txt  capture.cpp  classify.cpp  common.h  config.cpp  estimate.cpp  features.cpp  flandmark_detector.h  headtracker.cpp  headtracker.h  headtracker.sln  headtracker.spec  ht-api.h  ht-common.h  ht-internal.h  initial-guess.cpp  internal.h  model.cpp  posit.cpp  ransac.cpp  stdafx.cpp  stdafx.h
data/: bounding-box.raw  head-BACKUP.raw  head.blend  head.raw
demo/: headtracker-demo.cpp  headtracker.h
ftnoir/: compat.cpp  compat.h  headtracker-ftnoir.h  main.cpp  win32-message.cpp
headtracker/: LICENSE.txt  capture.cpp  classify.cpp  common.h  config.cpp  config.h  estimate.cpp  features.cpp  headtracker.cpp  headtracker.h  headtracker.vcxproj  headtracker.vcxproj.filters  initial-guess.cpp  internal.h  model.cpp  posit.cpp  ransac.cpp  stdafx.cpp  stdafx.h
headtracker-demo/: CMakeLists.txt  headtracker-demo.cpp  headtracker-demo.vcxproj  headtracker-demo.vcxproj.filters  stdafx.cpp  stdafx.h
headtracker-lib/: CMakeLists.txt  LICENSE.txt  api.h  capture.cpp  classify.cpp  common.h  config.cpp  estimate.cpp  features.cpp  headtracker.cpp  headtracker.h  initial-guess.cpp  internal.h  model.cpp  posit.cpp  ransac.cpp  stdafx.cpp  stdafx.h  targetver.h
mingw/: build.sh
mingw-build/: CMakeCache.txt  Makefile  cmake_install.cmake  head.blend  head.raw  headtracker.cbp
